[MODUSERS-360] - Sending Kafka message only for consortia tenant